--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
     "name": "portfolio",
     "version": "1.0.0",
     "description": "Rituraj Dutta Portfolio Website",
-    "main": "app.js",
+	"main": "app.js",
+	"engines": {
+		"node": "12.16.2",
+		"npm": "6.14.4"
+	},
     "scripts": {
         "watch:sass": "node-sass ./public/stylesheets/sass/main.scss ./public/stylesheets/css/style.css -w",
         "devserver": "live-server --browser=firefox",
