fixed project section responsivness

--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
     "name": "portfolio",
     "version": "1.0.0",
     "description": "Rituraj Dutta Portfolio Website",
-	"main": "app.js",
-	"engines": {
-		"node": "12.16.2",
-		"npm": "6.14.4"
-	},
+    "main": "app.js",
+    "engines": {
+        "node": "12.16.2",
+        "npm": "6.14.4"
+    },
     "scripts": {
         "watch:sass": "node-sass ./public/stylesheets/sass/main.scss ./public/stylesheets/css/style.css -w",
         "devserver": "live-server --browser=firefox",
-        "start": "nodemon app.js --prefix npm run build:css",
+        "start": "nodemon app.js --prefix npm run build:css -w",
         "compile:sass": "node-sass ./public/stylesheets/sass/main.scss ./public/stylesheets/css/style.comp.css",
         "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' ./public/stylesheets/css/style.comp.css -o ./public/stylesheets/css/style.prefix.css",
         "compress:css": "node-sass ./public/stylesheets/css/style.prefix.css ./public/stylesheets/css/style.css --output-style compressed",
