--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
         "postcss-cli": "^6.1.2"
     },
     "dependencies": {
+        "dotenv": "^8.2.0",
         "ejs": "^2.6.1",
-        "express": "^4.17.0"
+        "express": "^4.17.0",
+        "express-session": "^1.17.1",
+        "nodemailer": "^6.4.11",
+        "req-flash": "0.0.3"
     }
 }
